--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@actual-app/api": "^1.1.3"
+    "@actual-app/api": "^1.1.3",
+    "js-yaml": "^4.1.0"
   }
 }
