--- a/configs/investments.yaml.sample
+++ b/configs/investments.yaml.sample
@@ -1,12 +1,13 @@
 actualBudgetId: "myBudgetId" # found under "advanced" in your Actual settings
-stocks:
-  actualAccount: "Index Funds"
-  tickers:
-    - VOO: 10
-    - VTI: 10
-    - VXUS: 10
-crypto:
-  actualAccount: "Coinbase"
-  tickers:
-    - ETH: 10
-    - BTC: 10
+investments:
+  stocks:
+    actualAccount: "Index Funds"
+    tickers:
+      - VOO: 10
+      - VTI: 10
+      - VXUS: 10
+  crypto:
+    actualAccount: "Coinbase"
+    tickers:
+      - ETH: 10
+      - BTC: 10
