correctly query the crypto API to get the current worth of crypto

--- a/configs/investments.yaml.sample
+++ b/configs/investments.yaml.sample
@@ -1,4 +1,5 @@
 actualBudgetId: "myBudgetId" # found under "advanced" in your Actual settings
+cryptoCompareApiKey: "myAPIkey"
 investments:
   stocks:
     actualAccount: "Index Funds"
