--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@actual-app/api": "^1.1.3",
     "axios": "^0.24.0",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "stocks.js": "^0.0.19"
   }
 }
